--- a/static/index.html
+++ b/static/index.html
@@ -13,22 +13,37 @@
         <div class="mq-image"><h4>MySQL</h4><img src="static/temp/{{.MyImg}}"></div>
         {{end}}
 
-        <form class="upload" action="/upload" method="post" enctype="multipart/form-data" onsubmit="return false;">
+        <form class="upload" action="/upload" method="post" enctype="multipart/form-data">
             <label for="image">Image: </label><input name="image" id="image" type="file"><br>
-            <input id="submit" type="submit" value="Upload Image">
+            <input id="submit_u" type="submit" value="Upload Image">
         </form>
+        <form class="retrieve" action="/retrieve" method="post" id="retrieve" enctype="application/x-www-form-urlencoded">
+            <select name="images" form="retrieve">
+            {{if .Imgs}}
+                {{range $i , $img := .Imgs}}
+                <option value="{{$img}}">{{$img}}</option>
+                {{end}}
+            {{end}}
+            </select>
+            <input id="submit_r" type="submit" value="Retrieve Image">
+        </form>
+        
     </div>
 </body>
 <script>
-document.getElementById("submit").addEventListener("click", function(event){
+document.getElementById("submit_u").addEventListener("click", function(event){
     event.preventDefault();
-    submit();
+    submit("/upload");
+});
+document.getElementById("retrieve").addEventListener("submit", function(event){
+    event.preventDefault();
+    submit("/retrieve");
 });
 
-function submit() {
+function submit(url) {
     data = new FormData(document.querySelector('form'));
     xhr = new XMLHttpRequest()
-    xhr.open("POST", "/upload", true);
+    xhr.open("POST", url, true);
     xhr.send(data);
 }
 </script>
